--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 rich==13.3.5
+selectolax==0.3.16
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
