--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,55 @@
 altair==4.2.2
+asttokens==2.4.1
 attrs==23.1.0
+Babel==2.15.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
 bs4==0.0.1
 cachetools==5.3.1
 certifi==2023.5.7
-charset-normalizer==3.1.0
+charset-normalizer==3.3.2
 click==8.1.3
+comm==0.2.2
+courlan==1.2.0
+dateparser==1.2.0
+debugpy==1.8.1
 decorator==5.1.1
 dnspython==2.3.0
 entrypoints==0.4
+exceptiongroup==1.2.1
+executing==2.0.1
 gitdb==4.0.10
 GitPython==3.1.31
+htmldate==1.8.1
 idna==3.4
 importlib-metadata==6.6.0
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
 Jinja2==3.1.2
 jsonschema==4.17.3
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jusText==3.0.1
+lxml==5.2.2
+lxml_html_clean==0.1.1
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+nest-asyncio==1.6.0
 numpy==1.24.3
 packaging==23.1
 pandas==2.0.2
+parso==0.8.4
+pexpect==4.9.0
 Pillow==9.5.0
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
 protobuf==3.20.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==12.0.0
 pydeck==0.8.1b0
 Pygments==2.15.1
@@ -33,21 +59,28 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+pyzmq==26.0.3
+regex==2024.5.15
 requests==2.31.0
 rich==13.3.5
 selectolax==0.3.16
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
+stack-data==0.6.3
 streamlit==1.22.0
 tenacity==8.2.2
+tld==0.13
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
+trafilatura==1.10.0
+traitlets==5.14.3
 typing_extensions==4.6.2
 tzdata==2023.3
 tzlocal==5.0.1
 urllib3==2.0.2
 validators==0.20.0
 watchdog==3.0.0
+wcwidth==0.2.13
 zipp==3.15.0
