--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -50,7 +50,7 @@ showErrorDetails = true
 # "viewer" : Hide the developer options.
 # "minimal" : Show only options set externally (e.g. through Streamlit Community Cloud) or through st.set_page_config. If there are no options left, hide the menu.
 # Default: "auto"
-toolbarMode = "auto"
+toolbarMode = "minimal"
 
 
 [runner]
