--- a/requirements.txt
+++ b/requirements.txt
@@ -68,9 +68,10 @@ six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
 stack-data==0.6.3
-streamlit==1.22.0
+streamlit==1.36.0
 tenacity==8.2.2
 tld==0.13
+tldextract==5.1.2
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
