remove database dependancies

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,1 @@
-# DATABASE
-CONNECTION_STRING="mongodb://localhost:27017/"
-DATABASE_NAME="webpagesDB"
-
-# TASKS
-QUERY = {'$and': [{'status': 'PROCESSED-STATIC'}, {'batch_id': 1}]}
-FIELDS = {'status': 1, 'count': 1, 'scraped_at': 1}
-LIMIT = 100
-SAMPLING = True
+ANNOTATOR = "annotator_name"
