Moved directory structure to env

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,9 @@
-ANNOTATOR = "annotator_name"
+# ANNOTATIONS
+ANNOTATOR = 'annotator name'
+
+# STRUCTURE
+TASKS_FILE = 'data/tasks.csv'
+ANNOTATIONS_DIR = 'data/annotations'
+SELECTOLAX_DIR = 'data/selectolax'
+TRAFILATURA_DIR = 'data/trafilatura'
+HTML_DIR = 'data/html'
