--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,15 @@
 # ANNOTATIONS
 ANNOTATOR = 'annotator name'
 
+LABELS = 'None,Hollow,Listing,Article,Paywall,Login,Cookie,Wikipedia,Test,Other,News,Blog,Forum,Social Media,E-commerce,Government,Educational,Health,Tech,Entertainment,Sports,Other'
+
+# TASKS FILE
+TASKS_ID_COLUMN = '_id'
+TASKS_URL_COLUMN = 'target_url'
+TASKS_FULL_URL_COLUMN = 'landing_url'
+
 # STRUCTURE
+WORKING_DIR = 'data'
 TASKS_FILE = 'data/tasks.csv'
 ANNOTATIONS_DIR = 'data/annotations'
 SELECTOLAX_DIR = 'data/selectolax'
