--- a/.env-example
+++ b/.env-example
@@ -6,12 +6,11 @@ LABELS = 'None,Hollow,Listing,Article,Paywall,Login,Cookie,Wikipedia,Test,Other,
 # TASKS FILE
 TASKS_ID_COLUMN = '_id'
 TASKS_URL_COLUMN = 'target_url'
-TASKS_FULL_URL_COLUMN = 'landing_url'
 
 # STRUCTURE
 WORKING_DIR = 'data'
-TASKS_FILE = 'data/tasks.csv'
-ANNOTATIONS_DIR = 'data/annotations'
-SELECTOLAX_DIR = 'data/selectolax'
-TRAFILATURA_DIR = 'data/trafilatura'
-HTML_DIR = 'data/html'
+TASKS_FILE = 'tasks.csv'
+ANNOTATIONS_DIR = 'annotations'
+SELECTOLAX_DIR = 'selectolax'
+TRAFILATURA_DIR = 'trafilatura'
+HTML_DIR = 'html'
