fixing folder structure, adding example_workdir, changing key labels for inputs, create directories if they don't exist

--- a/.env-example
+++ b/.env-example
@@ -11,6 +11,6 @@ TASKS_URL_COLUMN = 'target_url'
 WORKING_DIR = 'data'
 TASKS_FILE = 'tasks.csv'
 ANNOTATIONS_DIR = 'annotations'
-SELECTOLAX_DIR = 'selectolax'
-TRAFILATURA_DIR = 'trafilatura'
+RAW_TEXT_DIR = 'selectolax'
+CLEANED_TEXT_DIR = 'trafilatura'
 HTML_DIR = 'html'
