default workdir, and no more data folder

--- a/.env-example
+++ b/.env-example
@@ -1,14 +1,14 @@
 # ANNOTATIONS
 ANNOTATOR = 'annotator name'
 
-LABELS = 'None,Hollow,Listing,Article,Paywall,Login,Cookie,Wikipedia,Test,Other,News,Blog,Forum,Social Media,E-commerce,Government,Educational,Health,Tech,Entertainment,Sports,Other'
+LABELS = 'Children,Energy,Cannabis'
 
 # TASKS FILE
 TASKS_ID_COLUMN = '_id'
-TASKS_URL_COLUMN = 'target_url'
+TASKS_URL_COLUMN = 'url'
 
 # STRUCTURE
-WORKING_DIR = 'data'
+WORKING_DIR = 'example_workdir'
 TASKS_FILE = 'tasks.csv'
 ANNOTATIONS_DIR = 'annotations'
 RAW_TEXT_DIR = 'selectolax'
