--- a/.env-example
+++ b/.env-example
@@ -11,6 +11,6 @@ TASKS_URL_COLUMN = 'url'
 WORKING_DIR = 'example_workdir'
 TASKS_FILE = 'tasks.csv'
 ANNOTATIONS_DIR = 'annotations'
-RAW_TEXT_DIR = 'selectolax'
-CLEANED_TEXT_DIR = 'trafilatura'
+RAW_TEXT_DIR = 'raw_text'
+CLEANED_TEXT_DIR = 'cleaned_text'
 HTML_DIR = 'html'
