--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ exceptiongroup==1.2.1
 executing==2.0.1
 Faker==25.9.2
 favicon==0.7.0
+filelock==3.15.4
 fonttools==4.53.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -77,6 +78,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 regex==2024.5.15
 requests==2.31.0
+requests-file==2.1.0
 rich==13.3.5
 selectolax==0.3.16
 six==1.16.0
