migrating to sqlite

--- a/.env-example
+++ b/.env-example
@@ -10,7 +10,7 @@ TASKS_URL_COLUMN = 'url'
 # STRUCTURE
 WORKING_DIR = 'example_workdir'
 TASKS_FILE = 'tasks.csv'
-ANNOTATIONS_DIR = 'annotations'
+ANNOTATIONS_DB = 'annotations.sqlite'
 RAW_TEXT_DIR = 'raw_text'
 CLEANED_TEXT_DIR = 'cleaned_text'
 HTML_DIR = 'html'
