move query parameters to the configuration file

--- a/.env-example
+++ b/.env-example
@@ -14,3 +14,7 @@ ANNOTATIONS_DB = 'annotations.sqlite'
 RAW_TEXT_DIR = 'raw_text'
 CLEANED_TEXT_DIR = 'cleaned_text'
 HTML_DIR = 'html'
+
+# URL PARSING
+# parameters used to find search terms in URLs
+URL_QUERY_PARAMS = 'q,p,query,text,search_query,search,psg'
