updating the default configuration

--- a/.env-example
+++ b/.env-example
@@ -15,6 +15,21 @@ RAW_TEXT_DIR = 'raw_text'
 CLEANED_TEXT_DIR = 'cleaned_text'
 HTML_DIR = 'html'
 
-# URL PARSING
+####################
+# URL PARSING AIDS #
+####################
+
 # parameters used to find search terms in URLs
 URL_QUERY_PARAMS = 'q,p,query,text,search_query,search,psg'
+
+# exclude commonly found steps in the paths that might be confused with SEO titles (aka. slugs)
+NOT_SEO_TITLES = 'cgi-bin,fast-cgi,auth-ui,consent-management,openid-connect,de-de,en-us,wba-ui,websso-prod,
+login-ui,login-callback,login-actions,sign-up,sign-in,sign-out,search,watch,results,web,result,scholar,url,
+dsearch,zustimmung,index,live,suche,suchergebnisse,home,top,default,welcome,homepage,main,start,surveys,
+viwweb,login,tv-sender,live-tv,tv-programm,streamen-tv,tv-programm-live-stream,alle-kategorien'
+
+# mapping dictionary for non special characters, e.g., below is the case for German umlauts
+SPECIAL_CHARACTER_MAP = '{"ß": "ss", "ä": "ae", "ö": "oe", "ü": "ue"}'
+
+# common extension endings in the slug
+COMMON_EXTENSIONS = 'html,htm,pdf,php,aspx,asp,php'
