Wrapping up the compilation workflow

--- a/paper/docker-compose.yml
+++ b/paper/docker-compose.yml
@@ -2,7 +2,6 @@ services:
   inara:
     image: openjournals/inara
     volumes:
-      - ./paper:/data
+      - .:/data
     environment:
       - JOURNAL=joss
-
