--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ htbuilder==0.6.2
 htmldate==1.8.1
 idna==3.4
 importlib-metadata==6.6.0
+iniconfig==2.0.0
 ipykernel==6.29.4
 ipython==8.24.0
 jedi==0.19.1
@@ -57,6 +58,7 @@ parso==0.8.4
 pexpect==4.9.0
 Pillow==9.5.0
 platformdirs==4.2.1
+pluggy==1.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 protobuf==3.20.3
@@ -71,6 +73,7 @@ pymongo==4.3.3
 Pympler==1.0.1
 pyparsing==3.1.2
 pyrsistent==0.19.3
+pytest==8.3.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
@@ -101,6 +104,7 @@ tenacity==8.2.2
 tld==0.13
 tldextract==5.1.2
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.2
 trafilatura==1.10.0
