--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -270,7 +270,7 @@
 
 # The preset Streamlit theme that your custom theme inherits from.
 # One of "light" or "dark".
-# base =
+base = "light"
 
 # Primary accent color for interactive elements.
 # primaryColor =
