Added random seed

--- a/.env-example
+++ b/.env-example
@@ -4,7 +4,10 @@
 
 ## Some ID for the annotator of the dataset. This ID will be used as a prefix for the comment and
 ## labels fields of the output.csv
-ANNOTATOR = 'annotator_name' # 
+ANNOTATOR = 'annotator_name'
+
+## Randomization Seed ('None' means not randomized)
+RANDOM_SEED = 'None'
 
 ## A comma-seperated list of labels that the ANNOTATOR may use for the tasks of the TASKS_FILE
 LABELS = 'Children,Energy,Cannabis'
