Updated documentation for RANDOM_SEED

--- a/.env-example
+++ b/.env-example
@@ -6,7 +6,7 @@
 ## labels fields of the output.csv
 ANNOTATOR = 'annotator_name'
 
-## Randomization Seed ('None' means not randomized)
+## The randomization seed to shuffle the tasks for the annotator ('None' means not randomized)
 RANDOM_SEED = 'None'
 
 ## A comma-seperated list of labels that the ANNOTATOR may use for the tasks of the TASKS_FILE
