move test files to tests_data

--- a/tests_data/.env-test
+++ b/tests_data/.env-test
@@ -28,7 +28,7 @@ TASKS_URL_COLUMN = 'url'
 
 ## The directory that will hold the TASKS_FILE, the annotations directory, the raw text directory,
 ## the cleaned text directory and the html directory
-WORKING_DIR = 'src/tests/work_dir'
+WORKING_DIR = 'tests_data/work_dir'
 
 ## The CSV file that holds the annotation tasks (including the TASKS_ID_COLUMN and TASKS_URL_COLUMN)
 TASKS_FILE = 'tasks.csv'
