--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,90 @@
-altair==4.2.2
-asttokens==2.4.1
-attrs==23.1.0
-Babel==2.15.0
-beautifulsoup4==4.12.2
-blinker==1.6.2
-bs4==0.0.1
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.3.2
-click==8.1.3
-comm==0.2.2
-contourpy==1.2.1
-courlan==1.2.0
+altair==5.5.0
+attrs==24.3.0
+babel==2.16.0
+beautifulsoup4==4.12.3
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+courlan==1.3.2
 cycler==0.12.1
 dateparser==1.2.0
-debugpy==1.8.1
-decorator==5.1.1
-dnspython==2.3.0
+distlib==0.3.8
 entrypoints==0.4
-exceptiongroup==1.2.1
-executing==2.0.1
-Faker==25.9.2
+Faker==33.3.1
 favicon==0.7.0
-filelock==3.15.4
-fonttools==4.53.0
-gitdb==4.0.10
-GitPython==3.1.31
-htbuilder==0.6.2
-htmldate==1.8.1
-idna==3.4
-importlib-metadata==6.6.0
-iniconfig==2.0.0
-ipykernel==6.29.4
-ipython==8.24.0
-jedi==0.19.1
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==8.6.1
-jupyter_core==5.7.2
+filelock==3.16.1
+fonttools==4.55.3
+gitdb==4.0.12
+GitPython==3.1.44
+htbuilder==0.9.0
+htmldate==1.9.3
+idna==3.10
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jusText==3.0.1
-kiwisolver==1.4.5
-lxml==5.2.2
-lxml_html_clean==0.1.1
-Markdown==3.6
-markdown-it-py==2.2.0
+kiwisolver==1.4.8
+lxml==5.3.0
+lxml_html_clean==0.4.1
+Markdown==3.7
+markdown-it-py==3.0.0
 markdownlit==0.0.7
-MarkupSafe==2.1.2
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
+MarkupSafe==3.0.2
+matplotlib==3.10.0
 mdurl==0.1.2
-more-itertools==10.3.0
-nest-asyncio==1.6.0
-numpy==1.24.3
-packaging==23.1
-pandas==2.0.2
-parso==0.8.4
-pexpect==4.9.0
-Pillow==9.5.0
-platformdirs==4.2.1
-pluggy==1.5.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-protobuf==3.20.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==12.0.0
-pydeck==0.8.1b0
-Pygments==2.15.1
-pymdown-extensions==10.8.1
-pymongo==4.3.3
-Pympler==1.0.1
-pyparsing==3.1.2
-pyrsistent==0.19.3
-pytest==8.3.2
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3
-PyYAML==6.0.1
-pyzmq==26.0.3
-regex==2024.5.15
-requests==2.31.0
+narwhals==1.22.0
+numpy==2.2.1
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+platformdirs==4.3.6
+plotly==5.24.1
+prometheus_client==0.21.1
+protobuf==5.29.3
+pyarrow==19.0.0
+pydeck==0.9.1
+Pygments==2.19.1
+pymdown-extensions==10.14
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.36.1
+regex==2024.11.6
+requests==2.32.3
 requests-file==2.1.0
-rich==13.3.5
-selectolax==0.3.16
-six==1.16.0
-smmap==5.0.0
-soupsieve==2.4.1
+rich==13.9.4
+rpds-py==0.22.3
+selectolax==0.3.27
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.6
 st-annotated-text==4.0.1
 st-theme==1.2.3
-stack-data==0.6.3
-streamlit==1.36.0
+streamlit==1.41.1
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
 streamlit-embedcode==0.1.2
-streamlit-extras==0.4.3
+streamlit-extras==0.5.0
 streamlit-faker==0.0.3
 streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.2.4
+streamlit-keyup==0.3.0
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
-tenacity==8.2.2
+tenacity==9.0.0
 tld==0.13
-tldextract==5.1.2
+tldextract==5.1.3
 toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.3.2
-trafilatura==1.10.0
-traitlets==5.14.3
-typing_extensions==4.6.2
-tzdata==2023.3
-tzlocal==5.0.1
-urllib3==2.0.2
-validators==0.20.0
-watchdog==3.0.0
-wcwidth==0.2.13
-zipp==3.15.0
+tornado==6.4.2
+trafilatura==2.0.0
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+urllib3==2.3.0
+validators==0.34.0
+virtualenv==20.26.6
+watchdog==6.0.0
