--- a/requirements_streamlit141.txt
+++ b/requirements_streamlit141.txt
@@ -39,9 +39,9 @@ narwhals==1.22.0
 numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
-#pillow==11.1.0
+pillow==11.1.0
 platformdirs==4.3.6
-#plotly==5.24.1
+plotly==5.24.1
 prometheus_client==0.21.1
 protobuf==5.29.3
 pyarrow==19.0.0
@@ -65,18 +65,17 @@ smmap==5.0.2
 soupsieve==2.6
 st-annotated-text==4.0.1
 st-theme==1.2.3
-streamlit==1.36.0
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.5.0
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.2.4
-streamlit-shortcuts==0.1.3
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-#tenacity==9.0.0
+streamlit==1.41.1
+#streamlit-camera-input-live==0.2.0
+#streamlit-card==1.0.2
+#streamlit-embedcode==0.1.2
+#streamlit-extras==0.5.0
+#streamlit-faker==0.0.3
+#streamlit-image-coordinates==0.1.9
+#streamlit-keyup==0.3.0
+#streamlit-toggle-switch==1.0.2
+#streamlit-vertical-slider==2.5.5
+tenacity==9.0.0
 tld==0.13
 tldextract==5.1.3
 toml==0.10.2
@@ -86,6 +85,6 @@ typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
 urllib3==2.3.0
-validators==0.20.0
+validators==0.34.0
 virtualenv==20.26.6
-#watchdog==6.0.0
+watchdog==6.0.0
