--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ contourpy==1.3.1
 courlan==1.3.2
 cycler==0.12.1
 dateparser==1.2.0
+decorator==5.1.1
 distlib==0.3.8
 entrypoints==0.4
 Faker==33.3.1
@@ -39,9 +40,9 @@ narwhals==1.22.0
 numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
-#pillow==11.1.0
+pillow==10.4.0
 platformdirs==4.3.6
-#plotly==5.24.1
+plotly==6.0.0
 prometheus_client==0.21.1
 protobuf==5.29.3
 pyarrow==19.0.0
@@ -76,7 +77,7 @@ streamlit-keyup==0.2.4
 streamlit-shortcuts==0.1.3
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
-#tenacity==9.0.0
+tenacity==8.5.0
 tld==0.13
 tldextract==5.1.3
 toml==0.10.2
@@ -88,4 +89,5 @@ tzlocal==5.2
 urllib3==2.3.0
 validators==0.20.0
 virtualenv==20.26.6
-#watchdog==6.0.0
+watchdog==4.0.2
+
